# intor

./: README.md  bun.lockb  package-lock.json  package.json  turbo.json
apps/api/: package.json  pyproject.toml
apps/api/api/: main.py  run.py
apps/fastapi-backend/: pyproject.toml
apps/fastapi-backend/fastapi_backend/: run.py
apps/mobile/: app.json  index.js  package.json
apps/mobile/app/: _layout.tsx  test.tsx
apps/mobile/app/(tabs)/: _layout.tsx  about.tsx  index.tsx
